--- a/galery.css
+++ b/galery.css
@@ -16,3 +16,30 @@ body{
     display: flex;
     flex-direction: column;
 }
+
+.galeria{
+  display: flex;
+  flex-wrap: wrap;
+  justify-items: center;
+  gap: 0.5rem;
+  margin: 2rem auto;
+  max-width: 1200px;
+}
+
+.ofim{
+  width: 100%;
+    height: auto;
+    object-fit: cover;
+    max-width: 100%;
+    transition: transform 0.5s ease, filter 1s ease;
+    filter: blur(1px);
+    z-index: 0;
+}
+
+.ofim:hover{
+  z-index: 1;
+transform: scale(1.0);
+filter: blur(0px);
+box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
+cursor: none;
+}
